# Gomoku-AI

./: CMakeLists.txt  Gomook_Multi_Fred  Gomook_Single_Fred_SSL  README.md  bla.txt  test.txt
include/: board.hpp  defines.hpp  eval.hpp  minimax.hpp  new_server.hpp  pattern.hpp  server.hpp  state.hpp  test.hpp  utils.hpp
src/: board.cpp  eval.cpp  main.cpp  minimax.cpp  pattern.cpp  server.cpp  server_sync.cpp  state.cpp  test.cpp  utils.cpp
test/: Client.py
